[package]
name = "pamsm"
version = "0.1.0"
description = "Rust wrappers around PAM Service Modules functions"
authors = ["Raphael Catolino <raphael.catolino@gmail.com>"]
license = "GPLv3"
homepage = "https://github.com/rcatolino/pam_sm_rust"
keywords = ["pam", "service", "module", "wrapper", "ffi"]
categories = ["os::unix-apis", "authentication", "api-bindings"]

[dependencies]
libc = "^0.2.19"
time = "^0.1.37"
