[package]
name = "pamsm"
version = "0.3.1-alpha.0"
description = "Rust wrappers around PAM Service Modules functions"
authors = ["Raphael Catolino <raphael.catolino@gmail.com>"]
license = "GPL-3.0"
homepage = "https://github.com/rcatolino/pam_sm_rust"
keywords = ["pam", "service", "module", "wrapper", "ffi"]
categories = ["os::unix-apis", "authentication", "api-bindings"]

[dependencies]
libc = "^0.2.19"

[dev-dependencies]
time = "^0.1.37"

[features]
libpam = []

[package.metadata.release]
sign-commit = true
upload-doc = false
disable-publish = true
disable-push = true
pre-release-commit-message = "cargo: pamsm release {{version}}"
pro-release-commit-message = "cargo: version bump to {{version}}"
tag-message = "pams {{version}}"

[package.metadata.docs.rs]
features = ["libpam"]
